@@ -28,6 +28,7 @@
 - Use /tmp for default monitoring endpoint location for libbeat {pull}18131[18131]
 - Use default output by default {pull}18091[18091]
 - Fix panic and flaky tests for the Agent. {pull}18135[18135]
+- Fix default configuration after enroll {pull}18232[18232]
 
 ==== New features
 
